# tool-executor

./: .gitignore  .markdownlint-cli2.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  SPEC.md  codecov.yml  deny.toml  mise.toml  rust-toolchain.toml  typos.toml
.agent/: PLANS.md  plan-prompt-assembler-profiles.md
.agents/skills/prepare-release/: SKILL.md
.agents/skills/prepare-release/agents/: openai.yaml
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  zizmor.yml
assets/: default_config.toml
benches/: pipeline.rs
crates/tx/: Cargo.toml
crates/tx/src/: main.rs
crates/tx/tests/: main_smoke.rs
docs/: book.toml  config-reference.md  prompt-assembler.md  releasing.md
docs/src/: SUMMARY.md  index.md  troubleshooting.md
docs/src/advanced/: automation.md  index.md  logging.md  self-update.md
docs/src/appendix/: documentation-workflow.md  index.md  terminology.md
docs/src/assets/: config-schema.json
docs/src/configuration/: files.md  index.md  profiles.md  prompt-assembler.md  providers.md  snippets.md  wrappers.md
docs/src/getting-started/: directories.md  index.md  installation.md  quick-start.md
docs/src/reference/: cli-cheatsheet.md  configuration.md  index.md  releasing.md
docs/src/using-tx/: pipelines.md  search.md  sessions.md  tui-overview.md
scripts/: check_lcov_lines.sh
src/: app.rs  cli.rs  config.rs  indexer.rs  internal.rs  lib.rs  main.rs  pipeline.rs  prompts.rs  session.rs  sqlite_ext.rs  test_support.rs  util.rs
src/app/: tests.rs
src/commands/: db.rs  greet.rs  mod.rs  self_update.rs  stats.rs
src/config/: merge.rs  mod.rs  model.rs
src/db/: mod.rs  rag.rs
src/providers/: codex.rs  mod.rs
src/rag/: mod.rs
src/tui/: mod.rs  sanitize.rs  tests.rs
src/tui/snapshots/: tool_executor__tui__tests__tui_empty_entry_render.snap  tool_executor__tui__tests__tui_filter_status_render.snap  tool_executor__tui__tests__tui_profile_entry_render.snap  tool_executor__tui__tests__tui_search_results_render.snap  tool_executor__tui__tests__tui_status_overlay_render.snap
tests/: bin_error.rs  cli.rs  config_default.rs  config_load.rs  config_schema.rs  db_api.rs  indexer_api.rs  internal_prompt.rs  lib_api.rs  pipeline_api.rs  prompts_integration.rs  rag_vec.rs  session_usage.rs  snapshots.rs  stats_api.rs  tui_tmux.rs
tests/snapshots/: snapshots__greet_command_snapshot.snap
