[package]
name = "tool-executor"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
authors = ["Bede Carroll <bedecarroll@users.noreply.github.com>"]
description = "A thin, configurable launcher for AI code-assistant sessions"
homepage = "https://github.com/bedecarroll/tool-executor"
repository = "https://github.com/bedecarroll/tool-executor"
license = "MIT"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]
default-run = "tx"

[features]
default = []
self-update = ["dep:self_update"]

[[bin]]
name = "tx"
path = "src/main.rs"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[dependencies]
blake3 = "1.5"
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"
color-eyre = "0.6"
crossterm = "0.28"
directories = "6.0.0"
humantime = "2.1"
indexmap = { version = "2.2", features = ["serde"] }
itertools = "0.13"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
regex = "1.11"
rusqlite = { version = "0.31", features = ["bundled", "modern_sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
shlex = "1.3"
once_cell = "1.19"
shell-escape = "0.1"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing"] }
toml = { version = "0.9.8", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"
which = "6.0"
self_update = { version = "0.42.0", optional = true, default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls"] }
ansi-to-tui = { version = "6.0.0", default-features = false }
unicode-width = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
tempfile = "3.10"

[workspace.metadata.dist]
cargo-dist-version = "0.29.0"
ci = "github"
installers = ["shell", "powershell"]
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
install-path = ["CARGO_HOME"]
install-updater = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
unix-archive = ".tar.gz"
windows-archive = ".zip"
