[[bench]]
name = "pipeline"
harness = false
required-features = [ "benchmarks",]

[package]
name = "tool-executor"
version = "0.5.0"
edition = "2024"
rust-version = "1.90"
authors = [ "Bede Carroll <bedecarroll@users.noreply.github.com>",]
description = "A thin, configurable launcher for AI code-assistant sessions"
homepage = "https://github.com/bedecarroll/tool-executor"
repository = "https://github.com/bedecarroll/tool-executor"
license = "MIT"
readme = "README.md"
keywords = [ "cli",]
categories = [ "command-line-utilities",]
default-run = "tx-dev"

[features]
default = []
benchmarks = []

[workspace]
members = [ "crates/tx",]

[dependencies]
blake3 = "1.8"
clap_complete = "4.5.62"
clap_mangen = "0.2.31"
color-eyre = "0.6"
crossterm = "0.29"
directories = "6.0.0"
humantime = "2.3"
itertools = "0.14"
regex = "1.12"
serde_json = "1.0"
shellexpand = "3.1"
shlex = "1.3"
once_cell = "1.21"
shell-escape = "0.1"
thiserror = "2.0.17"
tracing = "0.1.44"
walkdir = "2.5"
which = "8.0"
unicode-width = "0.2.0"

[dev-dependencies]
assert_fs = "1.1"
predicates = "3.1"
tempfile = "3.23"
assert_cmd = "2.1"

[dependencies.clap]
version = "4.5.53"
features = [ "derive",]

[dependencies.indexmap]
version = "2.12.1"
features = [ "serde",]

[dependencies.ratatui]
version = "0.29"
default-features = false
features = [ "crossterm",]

[dependencies.rusqlite]
version = "0.38"
features = [ "bundled", "modern_sqlite",]

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.tui-markdown]
version = "0.3.6"
default-features = true

[dependencies.schemars]
version = "1.1"
features = [ "derive", "indexmap2",]

[dependencies.time]
version = "0.3"
features = [ "formatting", "local-offset", "macros", "parsing",]

[dependencies.toml]
version = "0.9.10"
features = [ "preserve_order",]

[dependencies.tracing-subscriber]
version = "0.3.22"
features = [ "env-filter", "fmt",]

[dependencies.self_update]
version = "0.42.0"
default-features = false
features = [ "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls",]

[dev-dependencies.insta]
version = "1.45.0"
features = [ "filters",]

[dev-dependencies.criterion]
version = "0.8.1"

[lints.clippy]
module_name_repetitions = "allow"

[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
dist = false
unix-archive = ".tar.gz"
windows-archive = ".zip"

[workspace.metadata.dist]
cargo-dist-version = "0.30.2"
ci = "github"
installers = [ "shell", "powershell",]
targets = [ "aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc",]
packages = [ "tx",]
install-path = "CARGO_HOME"
install-updater = false

[lints.clippy.pedantic]
level = "warn"
priority = -1

[workspace.metadata.dist.github-action-commits]
"actions/checkout" = "v6"
"actions/upload-artifact" = "v6"
"actions/download-artifact" = "v7"
